--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Firebase and Cards</string>
     <string name="action_settings">Settings</string>
     <string name="add_event">Add Event</string>
+    <string name="submit">Submit</string>
+    <string name="enter_description">Enter description</string>
+    <string name="enter_name">Enter name</string>
 </resources>
