--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="add_event">Add Event</string>
     <string name="submit">Submit</string>
-    <string name="enter_description">Enter description</string>
-    <string name="enter_name">Enter name</string>
+    <string name="enter_description">Report description</string>
+    <string name="enter_name">Report title</string>
 </resources>
