--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="submit">Submit</string>
     <string name="enter_description">Report description</string>
     <string name="enter_name">Report title</string>
+    <string name="enter_email">Enter email</string>
 </resources>
